--- a/views/partials/logsSidebar.handlebars
+++ b/views/partials/logsSidebar.handlebars
@@ -15,7 +15,7 @@ limitations under the License.
 --}}
 <a href="/">
 	<div id="home_link">
-		Pz-metrics Home</div>
+		Pz-Metrics Home</div>
 </a>
 <div id="logs_mapping_list">
 
